--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.3",
     "localforage": "^1.10.0",
